--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "express-jwt": "^5.3.0",
     "express-session": "^1.15.6",
     "http": "^0.0.0",
+    "jekyll": "^3.0.0-beta1",
     "jest": "^22.1.4",
     "jsonwebtoken": "^8.1.1",
     "lodash": "^4.17.4",
@@ -69,6 +70,7 @@
     "pg-hstore": "^2.3.2",
     "proxyquire": "^1.8.0",
     "querystring": "^0.2.0",
+    "sass": "^1.14.1",
     "sequelize": "3.31.1",
     "sequelize-cli": "^3.2.0",
     "serve-favicon": "^2.4.5",
